# link2json

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/link2json/: __init__.py  link.py
src/link2json.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_base_functionality.py
