[project]
name = "link2json"
version = "0.0.2"
authors = [
  { name="Dmitry Ben", email="dmitriy.ben@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/benms/link2json"
"Bug Tracker" = "https://github.com/benms/link2json/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
